--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,53 @@
-<div class="container header-container">
+<header class="container-fluid fixed-top">
+    <div class="row align-items-center">
+      <!-- Hamburger Menu (Left) -->
+      <div class="col-3 col-md-1">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+  
+      <!-- Logo in the Center -->
+      <div class="col-6 text-center">
+        <a href="{% url 'home' %}" class="main-logo-link">
+          <h2 class="my-0 title">String Theory</h2>
+        </a>
+      </div>
+  
+      <!-- Search and Basket Icons (Right) -->
+      <div class="col-3 col-md-2 text-right">
+        <ul class="list-inline mb-0">
+          <!-- Search Icon with Input -->
+          <li class="list-inline-item mr-3">
+            <div class="search-container position-relative">
+              <form action="/search" method="get">
+                <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
+                <label class="button searchbutton" for="searchright">
+                  <i class="fas fa-search fa-lg"></i>
+                </label>
+              </form>
+            </div>
+          </li>
+  
+          <!-- Basket Icon -->
+          <li class="list-inline-item">
+            <a href="/cart" class="text-black">
+              <i class="fas fa-shopping-bag fa-lg"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  
+    <!-- Collapsible Navbar for Hamburger -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <!-- Add your navigation links here -->
+      </ul>
+    </div>
+  </header>
+
+  <div class="container header-container">
     <div class="col">
         <!-- mobile-top-header.html Logo -->
         <div id="topnav" class="row pt-lg-2 justify-content-between align-items-center">
