--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,106 +1,42 @@
-<header class="container-fluid fixed-top">
-    <div class="row align-items-center">
-      <!-- Hamburger Menu (Left) -->
-      <div class="col-3 col-md-1">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+<header class="container-fluid fixed-top header-container"> <div class="row align-items-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light col-4 col-md-1"> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-  
-      <!-- Logo in the Center -->
-      <div class="col-6 text-center">
-        <a href="{% url 'home' %}" class="main-logo-link">
-          <h2 class="my-0 title">String Theory</h2>
-        </a>
-      </div>
-  
-      <!-- Search and Basket Icons (Right) -->
-      <div class="col-3 col-md-2 text-right">
-        <ul class="list-inline mb-0">
-          <!-- Search Icon with Input -->
-          <li class="list-inline-item mr-3">
-            <div class="search-container position-relative">
-              <form action="/search" method="get">
-                <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
-                <label class="button searchbutton" for="searchright">
-                  <i class="fas fa-search fa-lg"></i>
-                </label>
-              </form>
-            </div>
-          </li>
-  
-          <!-- Basket Icon -->
-          <li class="list-inline-item">
-            <a href="/cart" class="text-black">
-              <i class="fas fa-shopping-bag fa-lg"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  
-    <!-- Collapsible Navbar for Hamburger -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <!-- Add your navigation links here -->
-      </ul>
-    </div>
-  </header>
-
-  <div class="container header-container">
-    <div class="col">
-        <!-- mobile-top-header.html Logo -->
-        <div id="topnav" class="row pt-lg-2 justify-content-between align-items-center">
-            <div class="col-auto">
-            <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                <h2 class="my-0 title">String Theory</h2>
-            </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-expanded="false">
+                        Dropdown link
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                       </div>
+                </li>
+            </ul>
         </div>
+    </nav>
+
+    <div class="col-4 text-center"> <a href="{% url 'home' %}" class="main-logo-link">
+            <h2 class="my-0 title">String Theory</h2>
+        </a>
     </div>
-    <div class="col-auto">
-        <ul class="list-inline list-unstyled my-0">
-        <!-- Search bar -->
-        <li class="list-inline-item mr-2">
-            <div class="search-container">
-                <form action="/search" method="get">
-                    <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
-                    <label class="button searchbutton" for="searchright"><i class="fas fa-search fa-lg"></i></label>
-                </form>
+
+    <div class="col-4 text-right"> <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-3">
+                <div class="search-container position-relative">
+                    <form action="/search" method="get">
+                        <i class="fas fa-search fa-lg"></i>
+                    </form>
                 </div>
             </li>
-        <!-- User Account -->
-        <li class="list-inline-item dropdown mr-2">
-            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="text-center gold">
-                <div><i class="fas fa-user fa-lg"></i></div>
-                <p class="my-0">My Account</p>
-            </div>
-            </a>
-            <div class="dropdown-menu border-0 dropdown-menu-right" aria-labelledby="user-options">
-            {% if request.user.is_authenticated %} 
-                {% if request.user.is_superuser %}
-                    <a href="" class="dropdown-item">Product Management</a>
-                {% endif %}
-                <a href="" class="dropdown-item">My Profile</a>
-                <a href="{% url 'account_logout' %}" class="dropdown-item">Log Out</a>
-            {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-            {% endif %}
-            </div>
-        </li>
-        <!-- Shopping bag -->
-        <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-            <div class="text-center gold">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                <p class="my-0">
-                {% if grand_total %} £{{ grand_total|floatformat:2}} 
-                {% else %} £0.00 {% endif %}
-                </p>
-            </div>
-            </a>
-        </li>
+
+            <li class="list-inline-item">
+                <a href="/cart" class="text-black">
+                    <i class="fas fa-shopping-bag fa-lg"></i>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
+</header>
