--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,5 +1,5 @@
 <header class="container-fluid fixed-top header-container"> <div class="row align-items-center">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light col-4 col-md-1"> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+    <nav class="navbar navbar-expand-lg navbar-light col-4 col-md-1"> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,16 +22,14 @@
         </a>
     </div>
 
-    <div class="col-4 text-right"> <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-                <div class="search-container position-relative">
+    <div class="col-4 text-right"> 
+        <ul class="list-inline mb-0">
+            <li class="list-inline-item icon">
                     <form action="/search" method="get">
                         <i class="fas fa-search fa-lg"></i>
                     </form>
-                </div>
             </li>
-
-            <li class="list-inline-item">
+            <li class="list-inline-item icon">
                 <a href="/cart" class="text-black">
                     <i class="fas fa-shopping-bag fa-lg"></i>
                 </a>
