--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,10 +67,6 @@ body {
   max-width: 100%;
 }
 
-.burger {
-  padding-top: 50px;
-}
-
 /* -------------------------------- Media Queries */
 
 /* Mobile Styles (up to 767px) */
@@ -110,6 +106,10 @@ body {
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
     text-align: center;
+  }
+  .collapse {
+    width: 430px !important;
+    height: 932px !important;
   }
 }
 
@@ -234,6 +234,39 @@ nav .col {
   cursor: pointer;
 }
 
+/* stops burger pushing down page */
+.collapse {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1050;
+  background-color: #fff7ec;
+  border-right: 6px solid #1f1f1f;
+  border-bottom: 6px solid #1f1f1f;
+}
+
+.navbar-nav {
+  flex-direction: column; /* Stack links vertically */
+  margin-left: 25px;
+}
+
+.burger {
+  margin-top: 8px;
+}
+
+.btn-close {
+  background-color: #fff7ec;
+  border: none;
+  font-size: 1.5rem;
+  line-height: 1;
+  color: #1f1f1f;
+  opacity: 0.8;
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 0;
+}
 /* -------------------------------- page divider */
 
 .center-diamond {
