--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid fixed-top header-container">
     <div class="row d-flex justify-content-between align-items-center h-100">
             <div class="align-items-center col">
-                <nav class="navbar-expand-lg navbar-light col-md-1 text-left">
+                <nav class="navbar-expand-lg navbar-light col-md-1 text-left burger">
                     <!-- Hamburger Button -->
                     <button
                     class="navbar-toggler"
@@ -16,6 +16,14 @@
                     </button>
                     <!-- Collapsible Navigation Menu -->
                     <div class="collapse navbar-collapse" id="navbarNav">
+                        <button
+                                type="button"
+                                class="btn-close"
+                                style="top: 10px; right: 10px;"
+                                data-toggle="collapse"
+                                data-target="#navbarNav"
+                                aria-label="Close"
+                                ><i class="fa-solid fa-xmark"></i></button>
                     <ul class="navbar-nav">
                         <!-- First Dropdown Menu -->
                         <li class="nav-item dropdown">
@@ -54,6 +62,60 @@
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                         </li>
+                        <!-- Third Dropdown Menu -->
+                        <li class="nav-item dropdown">
+                            <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdownMenuLink2"
+                                role="button"
+                                data-toggle="dropdown"
+                                aria-expanded="false"
+                            >
+                                Menu 3
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                            </li>
+                        <!-- Fourth Dropdown Menu -->
+                        <li class="nav-item dropdown">
+                            <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdownMenuLink2"
+                                role="button"
+                                data-toggle="dropdown"
+                                aria-expanded="false"
+                            >
+                                Menu 4
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                            </li>
+                        <!-- Fifth Dropdown Menu -->
+                        <li class="nav-item dropdown">
+                            <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdownMenuLink2"
+                                role="button"
+                                data-toggle="dropdown"
+                                aria-expanded="false"
+                            >
+                                Menu 5
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                            </li>                
                     </ul>
                     </div>
                 </nav>
