--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,9 +1,9 @@
 <!-- Buttons and dropdowns for selecting items-->
 
-<div class="container">
+<div class="row">
     <div class="row navbar text-center d-flex justify-content-between">
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -14,7 +14,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -47,7 +47,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
@@ -69,7 +69,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -79,7 +79,7 @@
             </ul>
         </div>
         <div class="dropdown show col">
-            <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
         
