--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -15,24 +15,11 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6">
-        <h2 class="logo-font mb-4 header">Blog</h2>
+        <h2 class="logo-font mb-4 header">Blog list</h2>
         <h5 class="text-muted">xxxxxxxxxxxxxx</h5>
         <hr>
       </div>
     </div>
-
-    <div class="row">
-      <div class="col">
-        {% if request.user.is_authenticated %}
-          <div class="text-right">
-            <p class="text-muted">Author authenticated, click to add to blog!</p>
-            <a class="btn btn-black rounded-0" href="{% url 'add_blog' %}">Add Blog</a>
-          </div>
-          <hr>
-        {% endif %}
-      </div>
-    </div>
-
     {% for post in blog_page %}
       <div class="row mb-4 align-items-center">
         <!-- Text Content -->
